# dmux

./: .gitignore  LICENSE  README.ko.md  README.md  go.mod  install.sh
cmd/dmux/: main.go
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs  platform.rs
frontend/src/components/: BranchPanel.css  BranchPanel.tsx  PaneContainer.css  PaneContainer.tsx  TerminalPane.css  TerminalPane.tsx  WorkspaceSidebar.css  WorkspaceSidebar.tsx
frontend/src/hooks/: usePaneLayout.ts  useWorkspaces.ts
internal/config/: config.go
internal/tmux/: tmux.go
internal/tui/: dashboard.go  keys.go  styles.go
internal/worktree/: worktree.go
