[package]
name = "dmux"
version = "0.1.0"
description = "A dashboard CLI for git worktrees with tmux"
authors = ["dong3789"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "dmux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
portable-pty = "0.8"
dirs = "5"
which = "7"
